--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,4 +5,8 @@
     Get this theme
     <a href="https://github.com/starry99/catbook" target="_blank">here</a>.
   </div>
+  
+  <span id="busuanzi_container_site_pv">
+    本站总访问量<span id="busuanzi_value_site_pv"></span>次
+  </span>
 </footer>
