--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,7 @@
 <!-- js from https://codepen.io/MrGrigri/pen/XQmWBv -->
 
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
 <script>
 // @license magnet:?xt=urn:btih:d3d9a9a6595521f9666a5e94cc830dab83b65699&dn=expat.txt Expat
     const themePreference = () => {
