--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <footer class="footer">
   <div>
     &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}.
-    Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>.
-    Get this theme
-    <a href="https://github.com/starry99/catbook" target="_blank">here</a>.
+    Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
+     • Theme
+    <a href="https://github.com/starry99/catbook" target="_blank">catbook</a>
+     • 
+    <a href="https://whfox.github.io/feed.xml" target="_blank">RSS</a>
   </div>
   
   <span id="busuanzi_container_site_pv">
