--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer class="footer">
   <div>
-    &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}.
+    &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}
+  </div>
+  <div>
     Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
      • Theme
     <a href="https://github.com/starry99/catbook" target="_blank">catbook</a>
