--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div>
-    &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}
+    &copy; {{ site.time | date: '%Y' }} {{ site.user.name }} 本站已运行：<span id="htmer_time";"></span>
   </div>
   <div>
     Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
@@ -9,8 +9,4 @@
      • 
     <a href="https://whfox.github.io/feed.xml" target="_blank">RSS</a>
   </div>
-  
-  <span id="busuanzi_container_site_pv">
-    本站总访问量<span id="busuanzi_value_site_pv"></span>次
-  </span>
 </footer>
