--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div>
-    &copy; {{ site.time | date: '%Y' }} {{ site.user.name }} 本站已运行：<span id="htmer_time";"></span>
+    &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}  •  本站已运行<span id="htmer_time";"></span>
   </div>
   <div>
     Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
