--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -637,6 +637,7 @@ img {
         margin: 10px 0 10px 0;
         padding: 2px 8px 2px 8px;
         font-style: italic;
+        word-break: break-word;
     }
 
     dfn {
