update about me

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -698,6 +698,11 @@ img {
     padding: 10px;
 }
 
+.post_coffee {
+    margin-right: 5%;
+	position: fixed; 
+	bottom: 0;
+}
 
 /* 6. Footer
    ========================================================================== */
