update about me

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -699,9 +699,9 @@ img {
 }
 
 .post_coffee {
-    margin-right: 5%;
-	position: fixed; 
-	bottom: 0;
+	position: absolute; 
+	bottom: 2%;
+    right: 4%;
 }
 
 /* 6. Footer
