--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -347,3 +347,42 @@ template {
 [hidden] {
   display: none;
 }
+
+
+/**
+ * 目录
+ */
+.scroll-nav__list, .scroll-nav__sub-list {
+  margin: 0;
+  padding-left: 1.4em;
+  list-style-type: none;
+  line-height: 20px;
+}
+
+
+
+.scroll-nav__item {
+  margin-bottom: 5px;
+  list-style-type: none;
+}
+
+.scroll-nav__item--active > a {
+  //padding: 5px;
+  font-weight: bold;
+  position: relative;
+  color: #000000;
+  //background: $red;
+  text-decoration: none;
+  //transition: 0.5s;
+  &:hover{
+      color:$black
+  }
+}
+
+.scroll-nav__link {
+  color: $black;
+  text-decoration: none;
+  //display: block;
+  //margin: 0 auto;
+  //padding-left: 42px;
+}
