--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,7 @@ layout: page
 
     {% include disqus.html username = site.disqus.shortname %}
     {% include cusdis.html %}
+    {% include toc.html html=content %}
 
   </div>
   {% endif %}
