--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,10 +10,12 @@
 
     {% include mobile_menu.html %}
     
+    {% include toc.html html=content %}
+    
     <main class="main">
 
     {{ content }}
-
+    
     </main>
 
   </div>
