--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,8 @@
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,400i" rel="stylesheet">
+  
+  <!-- reward -->
+  <link  href="/assets/css/myreward.css" rel="stylesheet"  type="text/css">
+  
 </head>
