--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,8 @@ layout: page
   
   <div class="reward">
 		<div class="reward-button">Buy me a cup of coffee ☕<span class="reward-code">
-			<span class="alipay-code"> <img class="http://tva1.sinaimg.cn/large/007aNvkTgy1h83rbrufhcj30jz0k6aby.jpg"><b>支付宝</b> </span>
-			<span class="wechat-code"> <img class="http://tva1.sinaimg.cn/large/007aNvkTgy1h83rbrv1zmj30db0dbq52.jpg"><b>微信</b> </span> </span>
+			<span class="alipay-code"> <img class="https://tva1.sinaimg.cn/large/007aNvkTgy1h83rbrufhcj30jz0k6aby.jpg"><b>支付宝</b> </span>
+			<span class="wechat-code"> <img class="https://tva1.sinaimg.cn/large/007aNvkTgy1h83rbrv1zmj30db0dbq52.jpg"><b>微信</b> </span> </span>
 		</div>	
 	</div>
   
