--- a/_includes/js.html
+++ b/_includes/js.html
@@ -9,6 +9,7 @@
 </script>
 
 <!-- back-top -->
+<script>
 $("#back-top").hide();
 $(document).ready(function () {
   $(window).scroll(function () {
@@ -25,6 +26,7 @@ $(document).ready(function () {
     return false;
   });
 });
+</script>
 
 <!-- run time -->
 <script>
