--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,6 +15,10 @@
     {{ content }}
     
     </main>
+    
+<div id="back-top">
+  <a href="#top" title="回到顶部"></a>
+</div>
 
   </div>
   {% include footer.html %}
