--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer class="footer">
+  <div id="back-top">
+      <a href="#top" title="回到顶部"></a>
+  </div>
   <div>
     &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}  •  <span id="RunTime";"></span>
   </div>
