--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,12 @@
     {{ content }}
     
     </main>
-  </div>
+    
+    <div id="back-top">
+      <a href="#top" title="回到顶部"></a>
+    </div>
+    
+ </div>
   {% include footer.html %}
   {% include js.html %}
 </body>
