--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -706,8 +706,8 @@ img {
 
 #back-top {
   position: fixed;
-  bottom: 10px;
-  margin-left: 1%;
+  bottom: 1%;
+  right: 1%;
 }
 #back-top a {
   width: 40px;
