--- a/_includes/js.html
+++ b/_includes/js.html
@@ -94,3 +94,7 @@ setInterval("ShowRunTime('RunTime')", 1000);
     }, false);
 // @license-end
 </script>
+
+<script type="text/javascript" src="https://whfox.github.io/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://whfox.github.io/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://whfox.github.io/js/sidebar.js"></script>
