--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,11 +17,11 @@
     </main>
  
  </div>
-  
+ 
  <div id="back-top">
    <a href="#top" title="回到顶部"></a>
  </div>
-    
+  {% include sidebar.html %}
   {% include footer.html %}
   {% include js.html %}
 </body>
