--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 ﻿<div id="totoro_fixed" >
-	<a href="#"><img src="{{site.url}}/img/cat2.jpg" alt="" /></a>
+	<a href="#">目录</a>
 </div>
 <div id="right_sidebar"">
 		<a href="#" class="a_catelog">文章目录</a>
