--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,7 @@
 ﻿<div id="totoro_fixed" >
-	<a href="#">目录</a>
+	<a href="#">
+	   <img src="https://whfox.github.io/assets/img/bg_up_arrow.png" alt="">
+	</a>
 </div>
 <div id="right_sidebar"">
 		<a href="#" class="a_catelog">文章目录</a>
@@ -7,6 +9,6 @@
 		
 	</div>
 	<div id = "sidebar_close">
-	    <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+	    <a href="#">关闭</span></a>
 	</div>
 </div>
