--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,5 @@
-﻿<div id="totoro_fixed" >
-	<a href="#">
-	   <img src="https://whfox.github.io/assets/img/bg_up_arrow.png" alt="">
-	</a>
+﻿<div id="totoro_fixed">
+	<a href="#" target="_self"><img src="https://whfox.github.io/assets/img/bg_up_arrow.png" alt=""></a>
 </div>
 <div id="right_sidebar"">
 		<a href="#" class="a_catelog">文章目录</a>
