--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -707,7 +707,7 @@ img {
 #back-top {
   position: fixed;
   bottom: 1%;
-  right: 1%;
+  right: 5px;
 }
 #back-top a {
   width: 40px;
@@ -745,13 +745,24 @@ img {
 }
 
 
-/*目录按钮图片*/
-#totoro_fixed img{
-	width: 100px;
-	position: fixed;
-	/* right: 50px; */
-	bottom: 70px;
-	z-index:9997;
+/*目录按钮*/
+#totoro_fixed {
+    position: fixed;
+    bottom: 1%;
+    right: 50px;
+}
+#totoro_fixed a{
+    width: 40px;
+    height: 40px;
+    display: block;
+    background: #ddd url(/assets/img/bg_up_arrow.png) no-repeat center center;
+    background-color: #aaa;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    transition: 1s;
 }
 /*右侧边栏*/
 #right_sidebar {
@@ -775,64 +786,6 @@ img {
 	background: -o-linear-gradient(right,#fff, #f8f8f8); 
 	background: -moz-linear-gradient(right,#fff, #f8f8f8); 
 	background: linear-gradient(to right,#fff, #f8f8f8); 
-}
-#sidebar_switch{
-	padding:20px 0 30px 80px;
-}
-#sidebar_switch a{
-	color:#666;
-	padding:2px;
-	text-decoration:none;
-	font-size:15px;
-	margin-right:15px;
-}
-#sidebar_switch a.active{
-	color:#1874CD;
-	text-shadow: 0 0 1px #8EE5EE;
-	border-bottom:1px solid #1874CD;
-}
-/*站点概要*/
-.sidebar_index img {
-	width: 120px;
-	position: absolute;
-	left: 85px;
-	top: 80px;
-	transition: all 2.0s;  
-	-moz-transition:all 2.0s;
-	-o-transition:all 2.0s;
-	-webkit-transition:all 2.0s;
-}
-.sidebar_index  img:hover{
-	 transform: rotate(180deg);  
-}
-.sidebar_index p{
-	color: #000;
-	text-shadow: 0 0 2px #999;
-	position: absolute;
-	font-weight:900;
-	top: 250px;
-	left: 100px;
-	font-size: 24px;
-	font-family:  "Josefin Sans",'Lucida Grande', 'Lucida Sans Unicode', "PingFang SC", "Microsoft YaHei", sans-serif;
-}
-#sidebar_content span {
-	color: #666;
-	position: absolute;
-	top: 300px;
-	left: 50px;
-	font-size: 14px;
-	border-bottom: 1px solid #222;
-}
-#sidebar_link{
-	position: absolute;
-	z-index:9999;
-	left: 30px;
-	bottom: 50px;
-}
-#sidebar_link a{
-	color: #000;
-	margin-right: 10px;
-	font-size: 14px;
 }
 /*文章目录*/
 .sidebar_catelog ul{
