--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -707,7 +707,7 @@ img {
 #back-top {
   position: fixed;
   bottom: 1%;
-  right: 5px;
+  right: 50px;
 }
 #back-top a {
   width: 40px;
@@ -749,13 +749,13 @@ img {
 #totoro_fixed {
     position: fixed;
     bottom: 1%;
-    right: 50px;
+    right: 5px;
 }
 #totoro_fixed a{
     width: 40px;
     height: 40px;
     display: block;
-    background: #ddd url(/assets/img/bg_up_arrow.png) no-repeat center center;
+    background: #ddd url(/assets/img/catalog.png) no-repeat center center;
     background-color: #aaa;
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
