--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -706,8 +706,8 @@ img {
 
 #back-top {
   position: fixed;
-  bottom: 1%;
-  right: 50px;
+  bottom: 5px;
+  right: 5px;
 }
 #back-top a {
   width: 40px;
@@ -748,7 +748,7 @@ img {
 /*目录按钮*/
 #totoro_fixed {
     position: fixed;
-    bottom: 1%;
+    bottom: 50px;
     right: 5px;
 }
 #totoro_fixed a{
