--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,7 @@
 ﻿<div id="totoro_fixed">
-	<a href="#" target="_self"></a>
+	<a target="_self"></a>
 </div>
 <div id="right_sidebar"">
-		<a href="#" class="a_catelog">文章目录</a>
 	<div class = "sidebar_catelog">
 		
 	</div>
