--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -768,18 +768,16 @@ img {
 #right_sidebar {
 	top: 0;
 	bottom: 0;
-	margin-right:3px;
 	right: -300px;
 	position: fixed;
-	width:300px;
+	width:200px;
 	z-index:9999;
-	border-radius: 10px;
 	background-color: var(--content_bg);
-	border-left:1px solid #ddd;
-	-webkit-border-radius: 2px;
+	//border-left:1px solid #ddd;
+	-webkit-border-radius: 10px;
 	-moz-border--radius: 2px;
 	border-radius: 2px;
-	-webkit-box-shadow: 0px 0px 10px 2px #ddd;
+	-webkit-box-shadow: 0px 0px 10px 2px var(--bg_color);
 	-moz-box-shadow: 0px 0px 10px 2px #ddd;
 	box-shadow: 0px 0px 10px 2px #ddd;
 	overflow-x:hidden;
