--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,6 +6,8 @@
 		
 	</div>
 	<div id = "sidebar_close">
-	    <a>关闭</span></a>
+	    <a>
+	      <img src="/assets/img/close.png" alt="close">
+	    </a>
 	</div>
 </div>
