--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -778,8 +778,8 @@ img {
 	-moz-border--radius: 2px;
 	border-radius: 10px;
 	-webkit-box-shadow: 0px 0px 10px 2px var(--bg_color);
-	-moz-box-shadow: 0px 0px 10px 2px #ddd;
-	box-shadow: 0px 0px 10px 2px #ddd;
+	-moz-box-shadow: 0px 0px 10px 2px var(--bg_color);
+	box-shadow: 0px 0px 10px 2px var(--bg_color);
 	overflow-x:hidden;
 	overflow-y:auto;
 }
